tests/frontend/fail/array/create_arg_array_type_mismatch.act
contract A

constructor(uint[2] n1)


contract B

constructor()

creates
  A a := new A([true, false])
